--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>792</width>
-    <height>380</height>
+    <height>408</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1239,6 +1239,13 @@ p, li { white-space: pre-wrap; }
             </item>
            </layout>
           </item>
+          <item>
+           <widget class="QCheckBox" name="checkUseProxyTranslator">
+            <property name="text">
+             <string>Use proxy for translation engine connections</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -1410,6 +1417,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>listProxyType</tabstop>
   <tabstop>editProxyLogin</tabstop>
   <tabstop>editProxyPassword</tabstop>
+  <tabstop>checkUseProxyTranslator</tabstop>
   <tabstop>checkLogNetworkRequests</tabstop>
   <tabstop>checkCreateCoredumps</tabstop>
   <tabstop>checkTabCloseBtn</tabstop>
@@ -1424,7 +1432,7 @@ p, li { white-space: pre-wrap; }
    <hints>
     <hint type="sourcelabel">
      <x>695</x>
-     <y>359</y>
+     <y>397</y>
     </hint>
     <hint type="destinationlabel">
      <x>204</x>
@@ -1440,7 +1448,7 @@ p, li { white-space: pre-wrap; }
    <hints>
     <hint type="sourcelabel">
      <x>781</x>
-     <y>359</y>
+     <y>397</y>
     </hint>
     <hint type="destinationlabel">
      <x>271</x>
@@ -1455,8 +1463,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>103</x>
-     <y>75</y>
+     <x>114</x>
+     <y>98</y>
     </hint>
     <hint type="destinationlabel">
      <x>123</x>
@@ -1471,8 +1479,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>673</x>
-     <y>75</y>
+     <x>684</x>
+     <y>98</y>
     </hint>
     <hint type="destinationlabel">
      <x>770</x>
@@ -1487,8 +1495,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>158</x>
-     <y>165</y>
+     <x>256</x>
+     <y>191</y>
     </hint>
     <hint type="destinationlabel">
      <x>298</x>
@@ -1519,8 +1527,8 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>169</x>
-     <y>164</y>
+     <x>267</x>
+     <y>191</y>
     </hint>
     <hint type="destinationlabel">
      <x>298</x>
@@ -1535,12 +1543,12 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>193</x>
-     <y>167</y>
+     <x>276</x>
+     <y>191</y>
     </hint>
     <hint type="destinationlabel">
-     <x>298</x>
-     <y>287</y>
+     <x>337</x>
+     <y>311</y>
     </hint>
    </hints>
   </connection>
@@ -1555,8 +1563,8 @@ p, li { white-space: pre-wrap; }
      <y>95</y>
     </hint>
     <hint type="destinationlabel">
-     <x>312</x>
-     <y>127</y>
+     <x>311</x>
+     <y>131</y>
     </hint>
    </hints>
   </connection>
@@ -1631,12 +1639,28 @@ p, li { white-space: pre-wrap; }
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>470</x>
-     <y>225</y>
+     <x>769</x>
+     <y>289</y>
     </hint>
     <hint type="destinationlabel">
-     <x>500</x>
-     <y>253</y>
+     <x>769</x>
+     <y>319</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkUseProxy</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkUseProxyTranslator</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>161</x>
+     <y>86</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>153</x>
+     <y>175</y>
     </hint>
    </hints>
   </connection>
