Menu commands rearranged, more thread safety to adblock, additional menu action for network request logging.

--- a/logdisplay.ui
+++ b/logdisplay.ui
@@ -15,7 +15,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTextEdit" name="logView"/>
+    <widget class="QTextEdit" name="logView">
+     <property name="lineWrapMode">
+      <enum>QTextEdit::NoWrap</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
